# huffmancodec

./: LICENSE  README.md
haffmancodec/: CMakeLists.txt  main.c
haffmancodec/src/: bench.c  bench.h  codechuff.c  codechuff.h  hufftree.c  hufftree.h  ll.c  ll.h  ll_test.c  pq.c  pq.h  sonds.c  sonds.h  sonds_test.c
